--- a/style.css
+++ b/style.css
@@ -12,5 +12,22 @@ a
 #elso
 {
     width: 980px;
-    margi
+    border: none;
+    background-color: darkgreen;
+    margin: 0 auto;
+}
+
+#masodik
+{
+    width: 940px;
+    margin: 0 auto;
+    border: none;
+    background-color: white;
+}
+
+#sor2
+{
+    height: 40px;
+    background-color: black;
+    color: white;
 }
