--- a/style.css
+++ b/style.css
@@ -37,3 +37,11 @@ a
     margin: 0 auto;
     text-align: center;
 }
+
+#kep
+{
+    float: right;
+    margin-left: 5px;
+    margin-right: 5px;
+    border: 1px solid;
+}
